<resources>
    <string name="app_name">EmbedStock</string>
    <string name="action_settings">Settings</string>
    <string name="descricaoLogo">EmbedStock</string>
    <string name="label_usuario">Usuário:</string>
    <string name="label_senha">Senha:</string>
    <string name="enviar">Enviar</string>
    <string name="sair">Sair</string>
    <string name="entrada_produto">Produto</string>
    <string name="consulta_estoque">Estoque</string>
    <string name="trocar_senha">Cadastro Usuário</string>
    <string name="autenticacao">Autenticação</string>
    <string name="confirma_senha">Confirma Senha:</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="estoque">Estoque</string>
    <string name="produto">Produto</string>
    <string name="codigo">Código:</string>
    <string name="descricao">Descrição:</string>
    <string name="codigo_barras">Código Barras:</string>
    <string name="quantidade">Qtd:</string>
    <string name="ativo">Ativo?</string>
    <string name="consulta">Consulta</string>
    <string name="consulta_estoque_scanner">Código de Barras</string>
    <string name="fabricante">Fabricante:</string>
    <string name="local">Local:</string>
    <string name="nivel_usuario">Nivel Usuário:</string>
    <string name="usuario">USUÁRIO</string>
    <string name="barcode">|I||I||</string>
    <array name="niveis">
        <item>Administrador</item>
        <item>Gerente</item>
        <item>Operador</item>
    </array>
    <array name="locais_estoque">
        <item>P001</item>
        <item>P002</item>
        <item>P003</item>
        <item>P004</item>
        <item>P005</item>
        <item>P006</item>
        <item>P007</item>
        <item>P008</item>
        <item>P009</item>
        <item>P010</item>
    </array>
    <array name="fabricantes">
        <item>Fabricante01</item>
        <item>Fabricante02</item>
        <item>Fabricante03</item>
        <item>Fabricante04</item>
        <item>Fabricante05</item>
        <item>Fabricante06</item>
    </array>

</resources>
