<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/logoAutenticacao"
        android:src="@drawable/autlogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:contentDescription="@string/descricaoLogo"/>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp">
        <TextView
            android:id="@+id/label_usuario"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/label_usuario"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/text_usuario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="10"
            android:layout_marginLeft="5dp"
            android:inputType="text"
            android:background="@android:drawable/editbox_background"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_senha"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/text_senha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"
            android:maxLength="8"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_confirmarAutenticacao"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        android:text="@string/enviar"
        android:onClick="autenticar"/>

</LinearLayout>