<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_phonelink_lock_black_36dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:text="@string/trocar_senha"
            android:layout_marginTop="5dp"
            android:textSize="30sp"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="25sp"
            android:text="@string/label_usuario"/>
        <EditText
            android:id="@+id/usuario"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:layout_marginLeft="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="25sp"
            android:text="@string/label_senha"/>
        <EditText
            android:id="@+id/senha"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp">
        <TextView
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:text="@string/confirma_senha"/>
        <EditText
            android:id="@+id/confirma_senha"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="0.11">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nivel_usuario"
                android:textSize="25sp"/>
            <Spinner
                android:id="@+id/nivel_usuario"
                android:layout_width="194dp"
                android:layout_height="44dp"
                android:background="@android:drawable/editbox_background"
                android:entries="@array/niveis">
            </Spinner>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/enviar_trocar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enviar"/>

</LinearLayout>
