<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_produto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/estoque128x128"/>
            <CheckBox
                android:text="@string/ativo"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:id="@+id/ativo" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/codigo"/>
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="9998768945678"
                    android:layout_marginLeft="15dp"
                    android:background="@android:drawable/editbox_background"
                    android:textSize="20sp"
                    android:textColor="@android:color/holo_red_light" />
                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/codigo_barras"
                android:id="@+id/label_codigo_barras" />
                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="879989098767989"
                    android:layout_marginLeft="15dp"
                    android:background="@android:drawable/editbox_background"
                    android:textSize="20sp"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/text_codigo_barras"/>
                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/descricao"
                android:id="@+id/label_descricao" />
                <TextView
                    android:layout_width="420dp"
                    android:layout_height="wrap_content"
                    android:text="Descrição do Produto"
                    android:layout_marginLeft="15dp"
                    android:background="@android:drawable/editbox_background"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/text_descricao"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/fabricante"
                    android:id="@+id/label_fabricante" />
                <TextView
                    android:layout_width="420dp"
                    android:layout_height="wrap_content"
                    android:text="Fabricante do Produto"
                    android:layout_marginLeft="15dp"
                    android:background="@android:drawable/editbox_background"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/text_fabricante"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/quantidade"
                        android:id="@+id/label_quantidade"
                        android:layout_weight="0.52" />
                    <TextView
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/local"
                        android:id="@+id/label_local" />
                </LinearLayout>
                <ListView
                    android:id="@+id/lista_qtd_locais"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
